# flandmark

./: AUTHORS  CMakeLists.txt  INSTALL  README  flandmark_simple_example.m
bin7/: CMakeCache.txt  Project.sln  cmake_install.cmake  flandmark.sln
bin7/examples/: cmake_install.cmake
bin7/libflandmark/: flandmarkConfig.cmake
bin7/matlab_toolbox/mex/: cmake_install.cmake
cpp/: CMakeLists.txt  example1.cpp  example2.cpp  simple_example.cpp
cpp/libflandmark/: CMakeLists.txt  flandmark_detector.cpp  flandmark_detector.h  liblbp.cpp  liblbp.h
cpp/mex/: CMakeLists.txt  argmax_mex.cpp  argmax_mex.h  flandmark_detector_base_mex.cpp  flandmark_detector_mex.cpp  flandmark_load_model_mex.cpp  getNormalizedFrame_mex.cpp  lbp2sparse_mex.cpp
data/: LFW_annotation_info.txt  face.det  model.mat  seq_bruges04_300frames.avi
data/Images/: Aaron_Eckhart_0001.det  Aaron_Sorkin_0001.det  Jackie_Chan_0004.det  Jackie_Chan_0010.det  Jackie_Chan_0011.det  Jackie_Chan_0013.det  Kate_Hudson_0004.det  Keanu_Reeves_0001.det  Keanu_Reeves_0002.det  Kirsten_Dunst_0001.det  Lucy_Liu_0002.det  Marisa_Tomei_0001.det  Marisa_Tomei_0002.det  Michael_Schumacher_0001.det  Michael_Schumacher_0004.det  Paul_McCartney_0004.det  Paul_McCartney_0005.det  Pierce_Brosnan_0008.det  Prince_Charles_0002.det  Robert_Duvall_0001.det  Robert_Duvall_0002.det  Robert_Duvall_0003.det  Salma_Hayek_0001.det  Salma_Hayek_0002.det  Tony_Blair_0006.det  Vaclav_Havel_0001.det  Vaclav_Havel_0002.det  Vaclav_Havel_0004.det  Vaclav_Havel_0006.det  Vaclav_Havel_0007.det  Vaclav_Havel_0008.det  Vaclav_Havel_0009.det  Vaclav_Klaus_0002.det  Vladimir_Putin_0002.det  Wayne_Gretzky_0002.det  Winona_Ryder_0003.det  Winona_Ryder_0011.det  Winona_Ryder_0012.det  Winona_Ryder_0014.det  Winona_Ryder_0019.det  (+8 more)
examples/: CMakeLists.txt  example2.cpp  simple_example.cpp
flandmark/flandmark_example/: flandmark_example.sln
flandmark/flandmark_example/flandmark_example/: liblbp.h  simple_example.cpp
flandmark/flandmark_shared/: flandmark_shared.sln
flandmark/flandmark_simple_example/: flandmark_simple_example.sln
flandmark/flandmark_simple_example/flandmark_simple_example/: example1.cpp  flandmark_detector.cpp  flandmark_detector.h  simple_example.cpp
flandmark/libflandmark_shared/: libflandmark_shared.sln
flandmark/libflandmark_shared/libflandmark_shared/: liblbp.cpp
flandmark/libflandmark_static/: libflandmark_static.sln
flandmark/libflandmark_static/libflandmark_static/: ReadMe.txt  msvc-compat.h
learning/: README.txt  flandmark_learn.m
learning/bmrm/: bmrm.m  bmrm_old.m  parbmrm.m  pp_bmrm.m  pp_pbmrm.m  risk_svm.m
learning/code/: computeTRNrisk.m  dbDivision.m  detectorModelBuild.m  prepDataForLBP.m  pruneDB.m  runstats.m  test1.m  test2.m  testValidation.m  test_OrderedErr.m  test_bmrm.m
learning/code/Functions/: XML_get_attr_value.m  argmax2.m  buildPsi2.m  computeL.m  createMapTable2.m  crossprod.m  detector.m  getDisplacements.m  getImageFrame.m  getLandmarks.m  getPsiMat.m  getPsiMat_old.m  getQG.m  makeAABB.m  paramStats.m  prepLBPconf.m  prepareS0gt.m  read_lfw_annotation_file.m  risk2.m  risk2_unnormalized.m  strtokenize.m  tokens2path.m  transformPoints.m
learning/flandmark_data/: computeKappas.m  computeTRNrisk.m  dbDivision.m  detectorModelBuild.m  prepDataForLBP.m  pruneDB.m  runstats.m  test1.m  test2.m  testValidation.m  test_OrderedErr.m  test_bmrm.m
learning/flandmark_data/Functions/: argmax2.m  buildPsi2.m  computeL.m  createMapTable2.m  crossprod.m  deprecated_getNormalizedFrame.m  detector.m  face_XML_read.m  getDisplacements.m  getImageFrame.m  getLandmarks.m  getPsiMat.m  getPsiMat_old.m  getQG.m  makeAABB.m  paramStats.m  plotbox.m  prepLBPconf.m  prepareS0gt.m  read_lfw_annotation_file.m  risk2.m  risk2_unnormalized.m
learning/flandmark_data/MAT/: LFW_annotation.txt
learning/flandmark_data/bmrm/: bmrm_svm_example.m  parbmrm_svm_example.m  riply_dataset.mat
learning/flandmark_data/libocas/: AUTHORS  ChangeLog  Contents.m  INSTALL  Makefile  README  RELEASES  _lbppyr_features.mexw64  compute_errors_mex.c  lbpfilter_mex.c  lbppyr.m  lbppyr_features.mexa64  lbppyr_features.mexw64  lbppyr_features_logical.mexw64  lbppyr_features_mex.cpp  lbppyr_features_mex2.mexw64  lbppyr_features_mex_logical.cpp  lbppyr_features_sparse.mexa64  lbppyr_features_sparse.mexw64  lbppyr_features_sparse.txt  lbppyr_features_sparse2.mexw64  lbppyr_features_sparse2_mex.cpp  lbppyr_features_sparse_mex.cpp  lbppyr_features_sparse_mex.ilk  lbppyr_features_sparse_mex.mexw64  lbppyr_features_sparse_mex2.cpp  lbppyr_mex.c  lib_svmlight_format.c  lib_svmlight_format.h  liblbp.cpp  liblbp.h  libocas.c  libocas.h  libocas_test.m  libqp.h  libqp_splx.c  linclass  linclass.c  msvmocas  msvmocas.c  (+20 more)
learning/libqp/: ChangeLog  INSTALL
learning/libqp/data/: gsmo_qp_random100_libqp_sol.mat  gsmo_qp_random100_quadprog_sol.mat  gsmo_qp_random300.mat  (+9 more)
libflandmark/: CMakeLists.txt  flandmarkConfig.cmake.in  flandmark_detector.cpp  flandmark_detector.h  liblbp.h
libflandmark/bin7/: CMakeCache.txt  Project.sln  cmake_install.cmake
libflandmark/bin7/libflandmark/: flandmarkConfig.cmake
matlab_toolbox/: flandmark_compilemex.m  flandmark_simple_example.m
matlab_toolbox/bin7/: CMakeCache.txt  Project.sln
matlab_toolbox/mex/: CMakeLists.txt  argmax_mex.cpp  argmax_mex.mexa64  argmax_mex.mexmaci64  flandmark_detector.cpp  flandmark_detector.exp  flandmark_detector.h  flandmark_detector.mexa64  flandmark_detector.mexmaci64  flandmark_detector_base.exp  flandmark_detector_base.mexa64  flandmark_detector_base.mexmaci64  flandmark_detector_base_mex.cpp  flandmark_detector_mex.cpp  flandmark_load_model.mexa64  flandmark_load_model.mexmaci64  flandmark_load_model_mex.cpp  flandmark_write_model.exp  flandmark_write_model.mexa64  flandmark_write_model.mexmaci64  flandmark_write_model_mex.cpp  getNormalizedFrame.mexa64  getNormalizedFrame.mexmaci64  getNormalizedFrame_mex.cpp  lbp2sparse.mexa64  lbp2sparse.mexmaci64  lbp2sparse.mexw64  lbp2sparse_mex.cpp  liblbp.cpp  liblbp.h
testmex/: add.c  add.mexw64  test.m
(+184 files in other folders)
